# corpusforge

./: pyproject.toml
src/corpusforge/: cli.py  compiler.py  db.py  embedder.py  ingester.py  rationalizer.py  summarizer.py  topic_engine.py
src/corpusforge/parsers/: markdown_parser.py
tests/: conftest.py  test_compiler.py  test_db.py  test_ingester.py  test_parser.py  test_rationalizer.py
