[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corpusforge"
version = "0.1.0"
description = "A local knowledge graph and document rationalization CLI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sentence-transformers>=2.2.0",
    "google-genai",
    "rich>=13.0"
]

[project.scripts]
cf = "corpusforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
